test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET_api_private_ipinfo_2.snaphost
HTTP/2.0 200 OK
Content-Length: 38
Content-Type: application/json
Date: Thu, 11 Sep 2025 05:08:59 GMT
Referrer-Policy: strict-origin-when-cross-origin
Server: mdbws
Strict-Transport-Security: max-age=31536000; includeSubdomains;
X-Content-Type-Options: nosniff
X-Frame-Options: DENY
X-Java-Method: ApiPrivateIpInfoResource::getIpInfo
X-Java-Version: 17.0.15+6
X-Mongodb-Service-Version: gitHash=2a4a56167e2e63bf1c5cf5d7da2e312095087657; versionString=master
X-Permitted-Cross-Domain-Policies: none
X-Xgen-Up-Proto: HTTP/2

{"currentIpv4Address":"20.55.213.123"}